metadata-sfdx/force-app/main/default/objects/LiveText__ScreenPopSequence__c/LiveText__ScreenPopSequence__c.object-meta.xml
<CustomObject>
    <description>The order that LiveMessage will pop records to LiveMessage agents after an inbound text is accepted.</description>
    <label>Screen Pop Sequence</label>
    <nameField>
        <label>ScreenPopSequence Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Screen Pop Sequences</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>