metadata-sfdx/force-app/main/default/objects/LiveText__ScreenPopSequence__c/fields/LiveText__LiveText_Number__c.field-meta.xml
<CustomField>
    <fullName>LiveText__LiveText_Number__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>LiveMessage Phone Number</description>
    <label>LiveMessage Number</label>
    <referenceTo>LiveText__LiveText_Number__c</referenceTo>
    <relationshipLabel>ScreenPopSequence</relationshipLabel>
    <relationshipName>ScreenPopSequence</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>