metadata-sfdx/force-app/main/default/objects/LiveText__ScreenPopSequence__c/fields/LiveText__Record_Type__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Record_Type__c</fullName>
    <description>Record Type (Account, Contact, Lead, etc.)</description>
    <label>Record Type</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
</CustomField>