metadata-sfdx/force-app/main/default/objects/LiveText__ScreenPopSequence__c/fields/LiveText__Sequence__c.field-meta.xml
<CustomField>
    <fullName>LiveText__Sequence__c</fullName>
    <label>Sequence</label>
    <precision>2</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>